{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 389,
  "lineage": "37a27f50-6765-841b-340f-cefd7c40935f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bd01824d64912730",
            "arn": "arn:aws:ec2:us-east-1:668506174326:instance/i-08fb93cf1186fb66e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nginx_profile",
            "id": "i-08fb93cf1186fb66e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0168a1c5798809759",
            "private_dns": "ip-10-0-0-205.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.205",
            "public_dns": "ec2-44-211-219-116.compute-1.amazonaws.com",
            "public_ip": "44.211.219.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00a2652efa553e93d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06a1067c4afc85e9a",
            "tags": {
              "Name": "globo-web-app-dev-nginx-0",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            },
            "tags_all": {
              "Name": "globo-web-app-dev-nginx-0",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c040c666cacb86b2"
            ]
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.amzn2_linux",
            "module.app.aws_subnet.public",
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket",
            "random_integer.s3"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bd01824d64912730",
            "arn": "arn:aws:ec2:us-east-1:668506174326:instance/i-02650d484ae1e6b6b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nginx_profile",
            "id": "i-02650d484ae1e6b6b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07aeef9af6129f647",
            "private_dns": "ip-10-0-1-45.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.45",
            "public_dns": "ec2-54-243-2-51.compute-1.amazonaws.com",
            "public_ip": "54.243.2.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07d9021a724c72767",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02b260406578efcaa",
            "tags": {
              "Name": "globo-web-app-dev-nginx-1",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            },
            "tags_all": {
              "Name": "globo-web-app-dev-nginx-1",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c040c666cacb86b2"
            ]
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.amzn2_linux",
            "module.app.aws_subnet.public",
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "globo-web-app-dev-51058",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:668506174326:loadbalancer/app/globo-web-app-dev-alb/952f6a0b0f02ec71",
            "arn_suffix": "app/globo-web-app-dev-alb/952f6a0b0f02ec71",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "globo-web-app-dev-alb-77675726.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:668506174326:loadbalancer/app/globo-web-app-dev-alb/952f6a0b0f02ec71",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "globo-web-app-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c040c666cacb86b2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02b260406578efcaa"
              },
              {
                "subnet_id": "subnet-06a1067c4afc85e9a"
              }
            ],
            "subnets": [
              "subnet-02b260406578efcaa",
              "subnet-06a1067c4afc85e9a"
            ],
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            },
            "vpc_id": "vpc-05db01468b4f22f50",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "module.app.aws_subnet.public",
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:668506174326:listener/app/globo-web-app-dev-alb/952f6a0b0f02ec71/e8a049d616922b7c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:668506174326:targetgroup/globo-web-app-dev-alb-tg/7166b6e6ea0fd604",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:668506174326:listener/app/globo-web-app-dev-alb/952f6a0b0f02ec71/e8a049d616922b7c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:668506174326:loadbalancer/app/globo-web-app-dev-alb/952f6a0b0f02ec71",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "globo-web-app-dev-nginx",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            },
            "tags_all": {
              "Name": "globo-web-app-dev-nginx",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.alb_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "module.app.aws_subnet.public",
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:668506174326:targetgroup/globo-web-app-dev-alb-tg/7166b6e6ea0fd604",
            "arn_suffix": "targetgroup/globo-web-app-dev-alb-tg/7166b6e6ea0fd604",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:668506174326:targetgroup/globo-web-app-dev-alb-tg/7166b6e6ea0fd604",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "globo-web-app-dev-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05db01468b4f22f50"
          },
          "dependencies": [
            "module.app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:668506174326:targetgroup/globo-web-app-dev-alb-tg/7166b6e6ea0fd604-20240326051508196300000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:668506174326:targetgroup/globo-web-app-dev-alb-tg/7166b6e6ea0fd604",
            "target_id": "i-08fb93cf1186fb66e"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.alb_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.amzn2_linux",
            "module.app.aws_subnet.public",
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket",
            "random_integer.s3"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:668506174326:targetgroup/globo-web-app-dev-alb-tg/7166b6e6ea0fd604-20240326051507858600000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:668506174326:targetgroup/globo-web-app-dev-alb-tg/7166b6e6ea0fd604",
            "target_id": "i-02650d484ae1e6b6b"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.alb_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.amzn2_linux",
            "module.app.aws_subnet.public",
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668506174326:security-group/sg-0c040c666cacb86b2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c040c666cacb86b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "globo-web-app-dev-nginx_alb_sg",
            "name_prefix": "",
            "owner_id": "668506174326",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-05db01468b4f22f50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668506174326:network-acl/acl-0c5fca76969c98577",
            "default_network_acl_id": "acl-0c5fca76969c98577",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c5fca76969c98577",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "668506174326",
            "subnet_ids": [
              "subnet-02b260406578efcaa",
              "subnet-06a1067c4afc85e9a"
            ],
            "tags": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            },
            "tags_all": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            },
            "vpc_id": "vpc-05db01468b4f22f50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668506174326:route-table/rtb-0ef9717ef57087c7b",
            "default_route_table_id": "rtb-0ef9717ef57087c7b",
            "id": "rtb-0ef9717ef57087c7b",
            "owner_id": "668506174326",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            },
            "tags_all": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-05db01468b4f22f50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668506174326:security-group/sg-08b8439dc30e1ef0a",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-08b8439dc30e1ef0a",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "668506174326",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            },
            "tags_all": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            },
            "vpc_id": "vpc-05db01468b4f22f50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668506174326:internet-gateway/igw-05a2d2958844cf76b",
            "id": "igw-05a2d2958844cf76b",
            "owner_id": "668506174326",
            "tags": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            },
            "tags_all": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            },
            "vpc_id": "vpc-05db01468b4f22f50"
          },
          "dependencies": [
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05a2d2958844cf76b",
            "id": "r-rtb-05c57dd8ab09b6eb91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05c57dd8ab09b6eb9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.aws_internet_gateway.this",
            "module.app.aws_route_table.public",
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668506174326:route-table/rtb-05c57dd8ab09b6eb9",
            "id": "rtb-05c57dd8ab09b6eb9",
            "owner_id": "668506174326",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            },
            "tags_all": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-05db01468b4f22f50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0729f4c4bbddfe5dc",
            "route_table_id": "rtb-05c57dd8ab09b6eb9",
            "subnet_id": "subnet-06a1067c4afc85e9a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app.aws_route_table.public",
            "module.app.aws_subnet.public",
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f601ee988ca2f716",
            "route_table_id": "rtb-05c57dd8ab09b6eb9",
            "subnet_id": "subnet-02b260406578efcaa"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app.aws_route_table.public",
            "module.app.aws_subnet.public",
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668506174326:subnet/subnet-06a1067c4afc85e9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a1067c4afc85e9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "668506174326",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            },
            "tags_all": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            },
            "vpc_id": "vpc-05db01468b4f22f50"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668506174326:subnet/subnet-02b260406578efcaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b260406578efcaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "668506174326",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            },
            "tags_all": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            },
            "vpc_id": "vpc-05db01468b4f22f50"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668506174326:vpc/vpc-05db01468b4f22f50",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c5fca76969c98577",
            "default_route_table_id": "rtb-0ef9717ef57087c7b",
            "default_security_group_id": "sg-08b8439dc30e1ef0a",
            "dhcp_options_id": "dopt-03c2c51791817d590",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05db01468b4f22f50",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ef9717ef57087c7b",
            "owner_id": "668506174326",
            "tags": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            },
            "tags_all": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-global-web-app"
            }
          }
        }
      ]
    }
  ]
}